# ESM_protein_physics

./: classification.py  pyproject.toml  regression_model.py  sequence_evolution.py
data/: 41598_2018_33984_MOESM3_ESM.xlsx  uniprotkb_cc_bpcp_absorption_2024_01_27.tsv
scripts/: protein_language_modeling.py
